<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Commons -->
    <string name="app_name">FutuRisiko Battle Sim</string>
    <string name="action_settings">Settings</string>
    <string name="battle_result">Battle Result</string>
    <string name="step_by_step">Battle Step By Step</string>
    <string name="simulation">Simulation Result</string>
    <string name="troop">Troop</string>
    <string name="troops">Troops</string>
    <string name="defender">Defender</string>
    <string name="attacker">Attacker</string>
    <string name="tank">Tank</string>
    <string name="airplane">Airplane</string>
    <string name="submarine">Submarine</string>
    <string name="tanks">Tanks</string>
    <string name="airplanes">Airplanes</string>
    <string name="submarines">Submarines</string>
    <string name="fast_result">Fast Result</string>
	<string name="attacker_won">The attacker won!!</string>
	<string name="defender_won">The defender won!!</string>	
    
    <!-- Main Activity strings -->
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="actions">Actions</string>
    <string name="run_sim">Run Simulation</string>
    
    <!-- Battle Result strings -->
	<string name="round">round</string>
	<string name="rounds">rounds</string>
	<string name="which_has_lost">which has lost</string>
	<string name="the_battle_lasted">The battle lasted</string>
	<string name="the_attacker_used">The attacker used</string>
	<string name="the_defender_used">The defender used</string>
	
    <!-- Simulation strings -->
	<string name="chance">Change of winning</string>
	<string name="without_losses">without losses</string>
	<string name="avg_rounds">Average number of rounds before winning</string>
	<string name="avg_losses">Average number of losses</string>
	
	<!-- Step by Step strings -->
	<string name="last_result">Last result</string>
	<string name="last_losses">Last losses</string>
	<string name="empty_field">----</string>
	<string name="click_next">Click \'Next round\'</string>
	<string name="next_round">Next round</string>
	<string name="click_result">Click \'result\' for more details</string>
	<string name="st">st</string>
	<string name="nd">nd</string>
	<string name="rd">rd</string>
	<string name="th">th</string>
	<string name="lasted">lasted</string>
	<string name="lasted_plural">lasted</string>
	<string name="out_of">out of</string>
	<string name="round_result">round result</string>
	
	<!-- Sharing -->
	<string name="more_apps">More apps</string>
	<string name="share">Share app</string>
	<string name="share_msg">Tool for Risiko battles :</string>	
	<string name="play_store_link">
		https://play.google.com/store/apps/details?id=com.cuuuurzel.risiko_battle_sim
	</string>
</resources>
